Manipulando dados ausentes

--- a/Python/Pandas/estudoPandas.ipynb
+++ b/Python/Pandas/estudoPandas.ipynb
@@ -19,7 +19,9 @@
    "metadata": {},
    "source": [
     "### O objeto Pandas DataFrame \n",
-    "DataFrame pode ser pensado como uma generalização de um array NumPy ou como uma especialização de um dicionário Python."
+    "DataFrame pode ser pensado como uma generalização de um array NumPy ou como uma especialização de um dicionário Python.\n",
+    "\n",
+    "![Operador Pandas](https://raw.githubusercontent.com/naticost/DataAnalytics/main/Python/img/operatormet.png)"
    ]
   },
   {
@@ -220,6 +222,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Resumo das Diferenças\n",
+    "### Dados Ausentes:\n",
+    "Refere-se à falta de dados onde eles deveriam estar, representados geralmente por NaN em contextos numéricos e por None em contextos gerais.\n",
+    "\n",
+    "### Dados Nulos: \n",
+    "É um conceito mais amplo que pode incluir a ausência de valor ou dados desconhecidos. Em bancos de dados, é representado como NULL. Em Python/Pandas, None é frequentemente usado para representar dados nulos e é convertido para NaN em operações numéricas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### NaN: Representação de Dados Ausentes Numéricos\n",
     "O NaN (Not a Number) é uma forma comum de representar dados ausentes em contextos numéricos. É um valor especial de ponto flutuante reconhecido por sistemas que utilizam a representação de ponto flutuante padrão IEEE.\n",
     "\n",
@@ -389,6 +403,319 @@
     "\n",
     "x[0] = None\n",
     "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Valores em NA](https://raw.githubusercontent.com/naticost/DataAnalytics/main/Python/img/valoresNAN.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Trabalhando com Valores Nulos\n",
+    "\n",
+    "No Pandas, `None` e `NaN` são tratados de forma intercambiável para representar valores ausentes. Para gerenciar esses valores nulos, o Pandas oferece vários métodos úteis:\n",
+    "\n",
+    "- **`isnull()`**: Cria uma máscara booleana que indica onde os valores estão ausentes.\n",
+    "- **`notnull()`**: Faz o oposto de `isnull()`, mostrando onde os valores não estão ausentes.\n",
+    "- **`dropna()`**: Retorna uma versão dos dados onde os valores ausentes foram removidos.\n",
+    "- **`fillna()`**: Retorna uma cópia dos dados onde os valores ausentes foram preenchidos com um valor especificado.\n",
+    "\n",
+    "Esses métodos ajudam a identificar, limpar e substituir valores nulos em seus DataFrames e Series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    False\n",
+      "1     True\n",
+      "2    False\n",
+      "3     True\n",
+      "dtype: bool\n",
+      "0     True\n",
+      "1    False\n",
+      "2     True\n",
+      "3    False\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "dados = pd.Series([1, np.nan, 'hello', None])\n",
+    "print(dados.isnull())  # Indica onde os valores são nulos\n",
+    "print(dados.notnull())  # Indica onde os valores não são nulos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Frame Exemplo\n",
+      "     0    1  2\n",
+      "0  1.0  NaN  2\n",
+      "1  2.0  3.0  5\n",
+      "2  NaN  4.0  6\n",
+      "-----------------------------\n",
+      "     0    1  2\n",
+      "1  2.0  3.0  5\n",
+      "-----------------------------\n",
+      "   2\n",
+      "0  2\n",
+      "1  5\n",
+      "2  6\n",
+      "-----------------------------\n",
+      "     0    1  2\n",
+      "0  1.0  NaN  2\n",
+      "1  2.0  3.0  5\n",
+      "2  NaN  4.0  6\n",
+      "-----------------------------\n",
+      "     0    1  2   3\n",
+      "1  2.0  3.0  5 NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([[1, np.nan, 2], [2, 3, 5], [np.nan, 4, 6]])\n",
+    "print(\"Data Frame Exemplo\")\n",
+    "print(df)\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Remove linhas com qualquer valor nulo\n",
+    "print(df.dropna())\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Remove colunas com qualquer valor nulo\n",
+    "print(df.dropna(axis='columns'))\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Remove linhas onde todos os valores são nulos\n",
+    "df[3] = np.nan\n",
+    "print(df.dropna(axis='columns', how='all'))\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Remove linhas com menos de 3 valores não nulos\n",
+    "print(df.dropna(axis='rows', thresh=3))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preenchendo Valores Nulos\n",
+    "Em vez de remover valores nulos, você pode optar por substituí-los por valores válidos. Isso pode ser feito substituindo por um único número, como zero, ou utilizando métodos de imputação ou interpolação. O Pandas facilita esse processo com o método fillna(), que cria uma cópia dos dados com os valores nulos substituídos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1.0\n",
+      "b    NaN\n",
+      "c    2.0\n",
+      "d    NaN\n",
+      "e    3.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "dados = pd.Series([1, np.nan, 2, None, 3], index=list('abcde'))\n",
+    "print(dados)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1.0\n",
+       "b    0.0\n",
+       "c    2.0\n",
+       "d    0.0\n",
+       "e    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Trocados\\AppData\\Local\\Temp\\ipykernel_11476\\2068584607.py:1: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  dados.fillna(method='ffill')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "a    1.0\n",
+       "b    1.0\n",
+       "c    2.0\n",
+       "d    2.0\n",
+       "e    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.fillna(method='ffill')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para DataFrames, as opções são semelhantes e você também pode especificar o eixo ao longo do qual o preenchimento ocorre:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0    1  2   3\n",
+      "0  1.0  NaN  2 NaN\n",
+      "1  2.0  3.0  5 NaN\n",
+      "2  NaN  4.0  6 NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([[1, np.nan, 2, np.nan], [2, 3, 5, np.nan], [np.nan, 4, 6, np.nan]])\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Trocados\\AppData\\Local\\Temp\\ipykernel_11476\\4240272785.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df.fillna(method='ffill', axis=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0    1    2    3\n",
+       "0  1.0  1.0  2.0  2.0\n",
+       "1  2.0  3.0  5.0  5.0\n",
+       "2  NaN  4.0  6.0  6.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.fillna(method='ffill', axis=1)\n"
    ]
   }
  ],
