MultiIndex no Pandas

--- a/Python/Pandas/estudoPandas.ipynb
+++ b/Python/Pandas/estudoPandas.ipynb
@@ -717,6 +717,426 @@
    "source": [
     "df.fillna(method='ffill', axis=1)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resumo e Exemplos sobre MultiIndex no Pandas\n",
+    "\n",
+    "**Conceitos Principais:**\n",
+    "\n",
+    "1. **Criação de MultiIndex:**\n",
+    "   - **Listas de Tuplas:** Você pode criar um `MultiIndex` a partir de uma lista de tuplas, onde cada tupla representa um ponto de dados para cada nível do índice.\n",
+    "   - **Listas de Arrays:** Também é possível construir um `MultiIndex` utilizando listas de arrays, onde cada array contém os valores para cada nível de índice.\n",
+    "   - **Produto Cartesiano:** O `MultiIndex` pode ser gerado usando o produto cartesiano dos índices individuais, o que cria uma combinação de todos os valores possíveis entre os níveis.\n",
+    "   - **Nomes de Nível:** Atribuir nomes aos níveis do `MultiIndex` ajuda na clareza e na organização dos dados.\n",
+    "\n",
+    "**Exemplo Prático:**\n",
+    "\n",
+    "1. **Series Multiplicada:**\n",
+    "   - Um exemplo de uma `Series` com dois níveis de índices, como `estado` e `ano`, demonstra como acessar e manipular dados hierarquicamente.\n",
+    "\n",
+    "2. **DataFrame Multiplicado:**\n",
+    "   - Um `DataFrame` com índices e colunas hierárquicas (por exemplo, dados médicos por `ano` e `visita`) ilustra a aplicação prática do `MultiIndex`.\n",
+    "\n",
+    "**Operações Comuns:**\n",
+    "\n",
+    "1. **Indexação e Fatiamento:** Você pode indexar e fatiar dados em um `MultiIndex` de maneira intuitiva, utilizando múltiplos níveis de índices.\n",
+    "2. **Conversão:** Converta entre `Series` e `DataFrames` usando métodos como `unstack()` e `stack()`.\n",
+    "3. **Seleção Parcial:** Selecione dados com base em um nível específico do índice usando sintaxe simplificada.\n",
+    "\n",
+    "**Métodos de Criação:**\n",
+    "\n",
+    "1. **Construtores Diretos:** Utilize métodos como `pd.MultiIndex.from_tuples()` ou `pd.MultiIndex.from_arrays()` para criar um `MultiIndex`.\n",
+    "2. **Construção Explícita:** Crie o `MultiIndex` diretamente com níveis e rótulos definidos.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lista de Tuplas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex([('Brasil', 2023),\n",
+      "            ('Brasil', 2024),\n",
+      "            (   'EUA', 2023),\n",
+      "            (   'EUA', 2024)],\n",
+      "           names=['País', 'Ano'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de MultiIndex com listas de tuplas\n",
+    "tuples = [('Brasil', 2023), ('Brasil', 2024), ('EUA', 2023), ('EUA', 2024)]\n",
+    "multi_index = pd.MultiIndex.from_tuples(tuples, names=['País', 'Ano'])\n",
+    "print(multi_index)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Listas de Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex([('Brasil', 2023),\n",
+      "            ('Brasil', 2024),\n",
+      "            (   'EUA', 2023),\n",
+      "            (   'EUA', 2024)],\n",
+      "           names=['País', 'Ano'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de MultiIndex com listas de arrays\n",
+    "arrays = [['Brasil', 'Brasil', 'EUA', 'EUA'], [2023, 2024, 2023, 2024]]\n",
+    "multi_index = pd.MultiIndex.from_arrays(arrays, names=['País', 'Ano'])\n",
+    "print(multi_index)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Produto Cartesiano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex([('Brasil', 2023),\n",
+      "            ('Brasil', 2024),\n",
+      "            (   'EUA', 2023),\n",
+      "            (   'EUA', 2024)],\n",
+      "           names=['País', 'Ano'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import itertools\n",
+    "\n",
+    "# Criação de MultiIndex usando o produto cartesiano\n",
+    "levels = [['Brasil', 'EUA'], [2023, 2024]]\n",
+    "multi_index = pd.MultiIndex.from_product(levels, names=['País', 'Ano'])\n",
+    "print(multi_index)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nomes de Nível "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex([('Brasil', 2023),\n",
+      "            (   'EUA', 2024)],\n",
+      "           names=['País', 'Ano'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de MultiIndex com nomes de nível\n",
+    "tuples = [('Brasil', 2023), ('EUA', 2024)]\n",
+    "multi_index = pd.MultiIndex.from_tuples(tuples, names=['País', 'Ano'])\n",
+    "print(multi_index)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Series Multiplicada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estado  Ano \n",
+      "SP      2023    100\n",
+      "        2024    150\n",
+      "RJ      2023    200\n",
+      "        2024    250\n",
+      "dtype: int64\n",
+      "Ano\n",
+      "2023    100\n",
+      "2024    150\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de uma Series com MultiIndex\n",
+    "index = pd.MultiIndex.from_tuples([('SP', 2023), ('SP', 2024), ('RJ', 2023), ('RJ', 2024)], names=['Estado', 'Ano'])\n",
+    "data = pd.Series([100, 150, 200, 250], index=index)\n",
+    "print(data)\n",
+    "print(data.loc['SP'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame Mulplicado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      Exame       Resultado\n",
+      "                  Sanguíneo Urina     Valor\n",
+      "Paciente  Visita                           \n",
+      "Paciente1 Visita1        10     5         1\n",
+      "          Visita2        12     4         2\n",
+      "Paciente2 Visita1        15     6         3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de um DataFrame com MultiIndex\n",
+    "index = pd.MultiIndex.from_tuples([('Paciente1', 'Visita1'), ('Paciente1', 'Visita2'), ('Paciente2', 'Visita1')], names=['Paciente', 'Visita'])\n",
+    "columns = pd.MultiIndex.from_tuples([('Exame', 'Sanguíneo'), ('Exame', 'Urina'), ('Resultado', 'Valor')])\n",
+    "data = pd.DataFrame([[10, 5, 1], [12, 4, 2], [15, 6, 3]], index=index, columns=columns)\n",
+    "print(data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexação e Fatiamento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Valor\n",
+      "Ano        \n",
+      "2023     10\n",
+      "2024     20\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de MultiIndex e DataFrame\n",
+    "index = pd.MultiIndex.from_tuples([('SP', 2023), ('SP', 2024), ('RJ', 2023), ('RJ', 2024)], names=['Estado', 'Ano'])\n",
+    "data = pd.DataFrame([10, 20, 30, 40], index=index, columns=['Valor'])\n",
+    "print(data.loc['SP'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conversão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   x  y\n",
+      "A  1  2\n",
+      "B  3  4\n",
+      "A  x    1\n",
+      "   y    2\n",
+      "B  x    3\n",
+      "   y    4\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de uma Series com MultiIndex\n",
+    "index = pd.MultiIndex.from_tuples([('A', 'x'), ('A', 'y'), ('B', 'x'), ('B', 'y')])\n",
+    "data = pd.Series([1, 2, 3, 4], index=index)\n",
+    "\n",
+    "# Conversão para DataFrame\n",
+    "df = data.unstack()\n",
+    "print(df)\n",
+    "\n",
+    "# Conversão de volta para Series\n",
+    "series = df.stack()\n",
+    "print(series)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Seleção Parcial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ano\n",
+      "2023    10\n",
+      "2024    20\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criação de uma Series com MultiIndex\n",
+    "index = pd.MultiIndex.from_tuples([('SP', 2023), ('SP', 2024), ('RJ', 2023), ('RJ', 2024)], names=['Estado', 'Ano'])\n",
+    "data = pd.Series([10, 20, 30, 40], index=index)\n",
+    "\n",
+    "# Seleção parcial\n",
+    "print(data.xs('SP', level='Estado'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construtores Diretos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex([('A', 1),\n",
+      "            ('B', 2)],\n",
+      "           names=['Letra', 'Número'])\n",
+      "MultiIndex([('A', 1),\n",
+      "            ('B', 2)],\n",
+      "           names=['Letra', 'Número'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Criar MultiIndex diretamente a partir de tuplas\n",
+    "multi_index = pd.MultiIndex.from_tuples([('A', 1), ('B', 2)], names=['Letra', 'Número'])\n",
+    "print(multi_index)\n",
+    "\n",
+    "# Criar MultiIndex diretamente a partir de arrays\n",
+    "arrays = [['A', 'B'], [1, 2]]\n",
+    "multi_index = pd.MultiIndex.from_arrays(arrays, names=['Letra', 'Número'])\n",
+    "print(multi_index)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construção Explícita "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex([('A', 1),\n",
+      "            ('A', 2),\n",
+      "            ('B', 1),\n",
+      "            ('B', 2)],\n",
+      "           names=['Letra', 'Número'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Construção explícita de um MultiIndex\n",
+    "multi_index = pd.MultiIndex(levels=[['A', 'B'], [1, 2]], codes=[[0, 0, 1, 1], [0, 1, 0, 1]], names=['Letra', 'Número'])\n",
+    "print(multi_index)\n"
+   ]
   }
  ],
  "metadata": {
