--- a/Python/Pandas/estudoPandas.ipynb
+++ b/Python/Pandas/estudoPandas.ipynb
@@ -3270,6 +3270,174 @@
     "plt.legend(title='Método de Descoberta')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resumo sobre Operações de Strings Vetorizadas com Pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Uma das forças do Python é sua facilidade em lidar e manipular dados de string. O Pandas aprimora isso ao fornecer um conjunto abrangente de operações de string vetorizadas que são essenciais para a limpeza de dados do mundo real.\n",
+    "\n",
+    "### Operações de String com Pandas\n",
+    "Criação de Séries de String\n",
+    "Podemos criar uma série de dados de string da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    peter\n",
+      "1     Paul\n",
+      "2     MARY\n",
+      "3    gUIDO\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = ['peter', 'Paul', 'MARY', 'gUIDO']\n",
+    "names = pd.Series(data)\n",
+    "print(names)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Capitalização\n",
+    "Para capitalizar todas as entradas, ignorando valores nulos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Peter\n",
+      "1     Paul\n",
+      "2     Mary\n",
+      "3    Guido\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "capitalized_names = names.str.capitalize()\n",
+    "print(capitalized_names)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos de String Vetorizados no Pandas\n",
+    "Métodos Semelhantes aos do Python\n",
+    "Os métodos de string do Pandas espelham muitos métodos de string do Python:\n",
+    "\n",
+    "lower(): Converte para minúsculas\n",
+    "\n",
+    "upper(): Converte para maiúsculas\n",
+    "\n",
+    "len(): Retorna o comprimento das strings\n",
+    "\n",
+    "startswith(): Verifica se a string começa com um padrão específico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    peter\n",
+      "1     paul\n",
+      "2     mary\n",
+      "3    guido\n",
+      "dtype: object\n",
+      "0    5\n",
+      "1    4\n",
+      "2    4\n",
+      "3    5\n",
+      "dtype: int64\n",
+      "0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3    False\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(names.str.lower())\n",
+    "print(names.str.len())\n",
+    "print(names.str.startswith('T'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos Usando Expressões Regulares\n",
+    "Pandas também fornece métodos que aceitam expressões regulares:\n",
+    "\n",
+    "match(): Aplica re.match()\n",
+    "\n",
+    "extract(): Extrai grupos correspondentes\n",
+    "\n",
+    "findall(): Aplica re.findall()\n",
+    "\n",
+    "replace(): Substitui ocorrências do padrão\n",
+    "\n",
+    "contains(): Verifica se contém o padrão\n",
+    "\n",
+    "split(): Divide a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         0\n",
+      "0   Graham\n",
+      "1     John\n",
+      "2    Terry\n",
+      "3     Eric\n",
+      "4    Terry\n",
+      "5  Michael\n"
+     ]
+    }
+   ],
+   "source": [
+    "monte = pd.Series(['Graham Chapman', 'John Cleese', 'Terry Gilliam', 'Eric Idle', 'Terry Jones', 'Michael Palin'])\n",
+    "first_names = monte.str.extract('([A-Za-z]+)')\n",
+    "print(first_names)\n"
+   ]
   }
  ],
  "metadata": {
