Datas e Tempos no Pandas

--- a/Python/Pandas/estudoPandas.ipynb
+++ b/Python/Pandas/estudoPandas.ipynb
@@ -3438,6 +3438,194 @@
     "first_names = monte.str.extract('([A-Za-z]+)')\n",
     "print(first_names)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Datas e Tempos no Pandas\n",
+    "\n",
+    "Pandas foi desenvolvido no contexto de modelagem financeira e contém um conjunto abrangente de ferramentas para trabalhar com datas, horas e dados indexados por tempo. Aqui estão os principais tipos de dados de tempo abordados:\n",
+    "\n",
+    "Time Stamps: Referem-se a momentos específicos no tempo (e.g., 4 de julho de 2015 às 7:00am).\n",
+    "Time Intervals e Periods: Referem-se a intervalos de tempo entre um ponto inicial e final específico (e.g., o ano de 2015). Periods são intervalos de tempo de comprimento uniforme e não sobrepostos.\n",
+    "Time Deltas ou Durations: Referem-se a uma duração exata de tempo (e.g., uma duração de 22,56 segundos)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Saturday'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "datetime(year=2015, month=7, day=4)\n",
+    "\n",
+    "from dateutil import parser\n",
+    "date = parser.parse(\"4th of July, 2015\")\n",
+    "date.strftime('%A')  # 'Saturday'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arrays Tipados de Tempos: datetime64 do NumPy\n",
+    "datetime64 do NumPy codifica datas como inteiros de 64 bits, permitindo operações vetorizadas rápidas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2015-07-04', '2015-07-05', '2015-07-06', '2015-07-07',\n",
+       "       '2015-07-08', '2015-07-09', '2015-07-10', '2015-07-11',\n",
+       "       '2015-07-12', '2015-07-13', '2015-07-14', '2015-07-15'],\n",
+       "      dtype='datetime64[D]')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "date = np.array('2015-07-04', dtype=np.datetime64)\n",
+    "date + np.arange(12)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timestamp e DatetimeIndex são os principais objetos para trabalhar com séries temporais no Pandas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2015-07-04', '2015-07-05', '2015-07-06', '2015-07-07',\n",
+       "               '2015-07-08', '2015-07-09', '2015-07-10', '2015-07-11',\n",
+       "               '2015-07-12', '2015-07-13', '2015-07-14', '2015-07-15'],\n",
+       "              dtype='datetime64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "date = pd.to_datetime(\"4th of July, 2015\")\n",
+    "date.strftime('%A')  # 'Saturday'\n",
+    "\n",
+    "date + pd.to_timedelta(np.arange(12), 'D')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estruturas de Dados de Séries Temporais no Pandas\n",
+    "\n",
+    "Timestamp: Substituto eficiente para datetime do Python, baseado em numpy.datetime64.\n",
+    "\n",
+    "Period: Codifica um intervalo de frequência fixa baseado em numpy.datetime64.\n",
+    "\n",
+    "Timedelta: Substituto eficiente para timedelta do Python, baseado em numpy.timedelta64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PeriodIndex(['2015-07-03', '2015-07-04', '2015-07-06', '2015-07-07',\n",
+       "             '2015-07-08'],\n",
+       "            dtype='period[D]')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = pd.to_datetime([datetime(2015, 7, 3), '4th of July, 2015', '2015-Jul-6', '07-07-2015', '20150708'])\n",
+    "dates\n",
+    "\n",
+    "dates.to_period('D')  # Converte para PeriodIndex com frequência diária\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexação por Tempo no Pandas\n",
+    "A indexação de dados por timestamps torna as ferramentas de séries temporais do Pandas extremamente úteis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-07-04    2\n",
+       "2015-08-04    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = pd.DatetimeIndex(['2014-07-04', '2014-08-04', '2015-07-04', '2015-08-04'])\n",
+    "data = pd.Series([0, 1, 2, 3], index=index)\n",
+    "data['2014-07-04':'2015-07-04']\n",
+    "data['2015']  # Indexação por ano\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notas Importantes\n",
+    "pd.to_datetime() é a função comum para criar objetos Timestamp e DatetimeIndex.\n",
+    "\n",
+    "to_period() converte um DatetimeIndex em PeriodIndex.\n",
+    "\n",
+    "TimedeltaIndex é criado quando uma data é subtraída de outra."
+   ]
   }
  ],
  "metadata": {
